# oxidize-python

./: .gitignore  Cargo.toml  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.claude/hooks/: check-plan-approved.sh  check-pyclass-quality.sh  post-quality-review-reminder.sh
.github/workflows/: check-core-update.yml  ci.yml  parity-check.yml  receive-core-update.yml  release.yml
.private/: error-log.md  tdd-plan-full.md
docs/: COMPATIBILITY.md  FEATURE_PARITY.md
docs/lifecycle/: API_SURFACE.md  COMPATIBILITY_MATRIX.md  LIFECYCLE_STRATEGY.md
docs/lifecycle/wasm-bridge-skeleton/: Cargo.toml
docs/lifecycle/wasm-bridge-skeleton/src/: lib.rs
docs/lifecycle/workflows/: bridge-check-core-update.yml  bridge-parity-check.yml  bridge-receive-core-update.yml  core-notify-bridges.yml  core-release-with-notify.yml  wasm-ci.yml  wasm-release.yml
python/oxidize_pdf/: __init__.py  __init__.pyi  _oxidize_pdf.pyi
scripts/: check_parity.py
src/: actions.rs  advanced_tables.rs  ai_pipeline.rs  annotations.rs  batch_recovery_streaming.rs  charts.rs  content_parser.rs  document.rs  errors.rs  forms.rs  graphics.rs  graphics_advanced.rs  graphics_extraction.rs  image.rs  lib.rs  list.rs  operations.rs  outlines.rs  page.rs  page_labels.rs  page_transitions.rs  parser.rs  security.rs  semantic.rs  table.rs  text.rs  text_extraction.rs  tier8.rs  types.rs  verification.rs  viewer_preferences.rs  xmp_metadata.rs
tests/: conftest.py  test_actions_extended.py  test_advanced_tables.py  test_ai_pipeline.py  test_annotations.py  test_batch_recovery_streaming.py  test_calibrated_colors.py  test_charts.py  test_content_parser.py  test_document.py  test_document_config.py  test_errors.py  test_form_validation.py  test_forms.py  test_forms_deep.py  test_graphics.py  test_graphics_advanced.py  test_graphics_extraction.py  test_graphics_tier3.py  test_header_footer.py  test_image.py  test_import.py  test_list.py  test_metadata_reading.py  test_metadata_tier5.py  test_operations.py  test_operations_advanced.py  test_operations_tier2.py  test_outlines.py  test_page_transitions.py  test_parse_options.py  test_parser.py  test_quality_fixes.py  test_rich_annotations.py  test_security.py  test_security_tier7.py  test_semantic.py  test_signatures_deep.py  test_table.py  test_text.py  (+10 more)
